--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,3 +7,20 @@
     background-color: white;
     color: steelblue;
 }
+
+
+nav, footer {
+    background-color: steelblue;
+    color: white;
+    padding: 10px;
+}
+
+footer p {
+    font-size: 20px;
+    margin: 20px auto;
+}
+
+a:hover {
+    background-color: white;
+    color: steelblue;
+}
